FASyntacticAnalyzer.output
Terminals unused in grammar

   COMENTARI


State 22 conflicts: 1 shift/reduce
State 34 conflicts: 1 shift/reduce
State 48 conflicts: 1 shift/reduce


Grammar

    0 $accept: af $end

    1 af: alfabet estats transicions inicial finals

    2 alfabet: ALFABET OBRE simbol TANCA
    3        | ALFABET OBRE TANCA

    4 simbol: simbol COMA simbol
    5       | SIMBOL

    6 estats: ESTATS OBRE NUMERO TANCA
    7       | OBRE TANCA

    8 transicions: TRANSICIONS OBRE llista_transicions TANCA

    9 llista_transicions: transicio
   10                   | transicio COMA llista_transicions

   11 transicio: OBRE_P NUMERO COMA SIMBOL SEPARADOR NUMERO TANCA_P
   12          | OBRE_P NUMERO COMA NUMERO SEPARADOR NUMERO TANCA_P

   13 inicial: ESTAT_INICIAL OBRE NUMERO TANCA
   14        | ESTAT_INICIAL OBRE TANCA
   15        | ESTAT_INICIAL OBRE num TANCA

   16 finals: ESTATS_FINALS OBRE num TANCA
   17       | ESTATS_FINALS '{' '}'

   18 num: num COMA num
   19    | NUMERO


Terminals, with rules where they appear

$end (0) 0
'{' (123) 17
'}' (125) 17
error (256)
ALFABET (258) 2 3
OBRE (259) 2 3 6 7 8 13 14 15 16
TANCA (260) 2 3 6 7 8 13 14 15 16
COMA (261) 4 10 11 12 18
ESTATS (262) 6
TRANSICIONS (263) 8
ESTAT_INICIAL (264) 13 14 15
ESTATS_FINALS (265) 16 17
COMENTARI (266)
OBRE_P (267) 11 12
TANCA_P (268) 11 12
SEPARADOR (269) 11 12
SIMBOL (270) 5 11
NUMERO (271) 6 11 12 13 19


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
af (20)
    on left: 1, on right: 0
alfabet (21)
    on left: 2 3, on right: 1
simbol (22)
    on left: 4 5, on right: 2 4
estats (23)
    on left: 6 7, on right: 1
transicions (24)
    on left: 8, on right: 1
llista_transicions (25)
    on left: 9 10, on right: 8 10
transicio (26)
    on left: 11 12, on right: 9 10
inicial (27)
    on left: 13 14 15, on right: 1
finals (28)
    on left: 16 17, on right: 1
num (29)
    on left: 18 19, on right: 15 16 18


State 0

    0 $accept: . af $end

    ALFABET  shift, and go to state 1

    af       go to state 2
    alfabet  go to state 3


State 1

    2 alfabet: ALFABET . OBRE simbol TANCA
    3        | ALFABET . OBRE TANCA

    OBRE  shift, and go to state 4


State 2

    0 $accept: af . $end

    $end  shift, and go to state 5


State 3

    1 af: alfabet . estats transicions inicial finals

    OBRE    shift, and go to state 6
    ESTATS  shift, and go to state 7

    estats  go to state 8


State 4

    2 alfabet: ALFABET OBRE . simbol TANCA
    3        | ALFABET OBRE . TANCA

    TANCA   shift, and go to state 9
    SIMBOL  shift, and go to state 10

    simbol  go to state 11


State 5

    0 $accept: af $end .

    $default  accept


State 6

    7 estats: OBRE . TANCA

    TANCA  shift, and go to state 12


State 7

    6 estats: ESTATS . OBRE NUMERO TANCA

    OBRE  shift, and go to state 13


State 8

    1 af: alfabet estats . transicions inicial finals

    TRANSICIONS  shift, and go to state 14

    transicions  go to state 15


State 9

    3 alfabet: ALFABET OBRE TANCA .

    $default  reduce using rule 3 (alfabet)


State 10

    5 simbol: SIMBOL .

    $default  reduce using rule 5 (simbol)


State 11

    2 alfabet: ALFABET OBRE simbol . TANCA
    4 simbol: simbol . COMA simbol

    TANCA  shift, and go to state 16
    COMA   shift, and go to state 17


State 12

    7 estats: OBRE TANCA .

    $default  reduce using rule 7 (estats)


State 13

    6 estats: ESTATS OBRE . NUMERO TANCA

    NUMERO  shift, and go to state 18


State 14

    8 transicions: TRANSICIONS . OBRE llista_transicions TANCA

    OBRE  shift, and go to state 19


State 15

    1 af: alfabet estats transicions . inicial finals

    ESTAT_INICIAL  shift, and go to state 20

    inicial  go to state 21


State 16

    2 alfabet: ALFABET OBRE simbol TANCA .

    $default  reduce using rule 2 (alfabet)


State 17

    4 simbol: simbol COMA . simbol

    SIMBOL  shift, and go to state 10

    simbol  go to state 22


State 18

    6 estats: ESTATS OBRE NUMERO . TANCA

    TANCA  shift, and go to state 23


State 19

    8 transicions: TRANSICIONS OBRE . llista_transicions TANCA

    OBRE_P  shift, and go to state 24

    llista_transicions  go to state 25
    transicio           go to state 26


State 20

   13 inicial: ESTAT_INICIAL . OBRE NUMERO TANCA
   14        | ESTAT_INICIAL . OBRE TANCA
   15        | ESTAT_INICIAL . OBRE num TANCA

    OBRE  shift, and go to state 27


State 21

    1 af: alfabet estats transicions inicial . finals

    ESTATS_FINALS  shift, and go to state 28

    finals  go to state 29


State 22

    4 simbol: simbol . COMA simbol
    4       | simbol COMA simbol .

    COMA  shift, and go to state 17

    COMA      [reduce using rule 4 (simbol)]
    $default  reduce using rule 4 (simbol)


State 23

    6 estats: ESTATS OBRE NUMERO TANCA .

    $default  reduce using rule 6 (estats)


State 24

   11 transicio: OBRE_P . NUMERO COMA SIMBOL SEPARADOR NUMERO TANCA_P
   12          | OBRE_P . NUMERO COMA NUMERO SEPARADOR NUMERO TANCA_P

    NUMERO  shift, and go to state 30


State 25

    8 transicions: TRANSICIONS OBRE llista_transicions . TANCA

    TANCA  shift, and go to state 31


State 26

    9 llista_transicions: transicio .
   10                   | transicio . COMA llista_transicions

    COMA  shift, and go to state 32

    $default  reduce using rule 9 (llista_transicions)


State 27

   13 inicial: ESTAT_INICIAL OBRE . NUMERO TANCA
   14        | ESTAT_INICIAL OBRE . TANCA
   15        | ESTAT_INICIAL OBRE . num TANCA

    TANCA   shift, and go to state 33
    NUMERO  shift, and go to state 34

    num  go to state 35


State 28

   16 finals: ESTATS_FINALS . OBRE num TANCA
   17       | ESTATS_FINALS . '{' '}'

    OBRE  shift, and go to state 36
    '{'   shift, and go to state 37


State 29

    1 af: alfabet estats transicions inicial finals .

    $default  reduce using rule 1 (af)


State 30

   11 transicio: OBRE_P NUMERO . COMA SIMBOL SEPARADOR NUMERO TANCA_P
   12          | OBRE_P NUMERO . COMA NUMERO SEPARADOR NUMERO TANCA_P

    COMA  shift, and go to state 38


State 31

    8 transicions: TRANSICIONS OBRE llista_transicions TANCA .

    $default  reduce using rule 8 (transicions)


State 32

   10 llista_transicions: transicio COMA . llista_transicions

    OBRE_P  shift, and go to state 24

    llista_transicions  go to state 39
    transicio           go to state 26


State 33

   14 inicial: ESTAT_INICIAL OBRE TANCA .

    $default  reduce using rule 14 (inicial)


State 34

   13 inicial: ESTAT_INICIAL OBRE NUMERO . TANCA
   19 num: NUMERO .

    TANCA  shift, and go to state 40

    TANCA     [reduce using rule 19 (num)]
    $default  reduce using rule 19 (num)


State 35

   15 inicial: ESTAT_INICIAL OBRE num . TANCA
   18 num: num . COMA num

    TANCA  shift, and go to state 41
    COMA   shift, and go to state 42


State 36

   16 finals: ESTATS_FINALS OBRE . num TANCA

    NUMERO  shift, and go to state 43

    num  go to state 44


State 37

   17 finals: ESTATS_FINALS '{' . '}'

    '}'  shift, and go to state 45


State 38

   11 transicio: OBRE_P NUMERO COMA . SIMBOL SEPARADOR NUMERO TANCA_P
   12          | OBRE_P NUMERO COMA . NUMERO SEPARADOR NUMERO TANCA_P

    SIMBOL  shift, and go to state 46
    NUMERO  shift, and go to state 47


State 39

   10 llista_transicions: transicio COMA llista_transicions .

    $default  reduce using rule 10 (llista_transicions)


State 40

   13 inicial: ESTAT_INICIAL OBRE NUMERO TANCA .

    $default  reduce using rule 13 (inicial)


State 41

   15 inicial: ESTAT_INICIAL OBRE num TANCA .

    $default  reduce using rule 15 (inicial)


State 42

   18 num: num COMA . num

    NUMERO  shift, and go to state 43

    num  go to state 48


State 43

   19 num: NUMERO .

    $default  reduce using rule 19 (num)


State 44

   16 finals: ESTATS_FINALS OBRE num . TANCA
   18 num: num . COMA num

    TANCA  shift, and go to state 49
    COMA   shift, and go to state 42


State 45

   17 finals: ESTATS_FINALS '{' '}' .

    $default  reduce using rule 17 (finals)


State 46

   11 transicio: OBRE_P NUMERO COMA SIMBOL . SEPARADOR NUMERO TANCA_P

    SEPARADOR  shift, and go to state 50


State 47

   12 transicio: OBRE_P NUMERO COMA NUMERO . SEPARADOR NUMERO TANCA_P

    SEPARADOR  shift, and go to state 51


State 48

   18 num: num . COMA num
   18    | num COMA num .

    COMA  shift, and go to state 42

    COMA      [reduce using rule 18 (num)]
    $default  reduce using rule 18 (num)


State 49

   16 finals: ESTATS_FINALS OBRE num TANCA .

    $default  reduce using rule 16 (finals)


State 50

   11 transicio: OBRE_P NUMERO COMA SIMBOL SEPARADOR . NUMERO TANCA_P

    NUMERO  shift, and go to state 52


State 51

   12 transicio: OBRE_P NUMERO COMA NUMERO SEPARADOR . NUMERO TANCA_P

    NUMERO  shift, and go to state 53


State 52

   11 transicio: OBRE_P NUMERO COMA SIMBOL SEPARADOR NUMERO . TANCA_P

    TANCA_P  shift, and go to state 54


State 53

   12 transicio: OBRE_P NUMERO COMA NUMERO SEPARADOR NUMERO . TANCA_P

    TANCA_P  shift, and go to state 55


State 54

   11 transicio: OBRE_P NUMERO COMA SIMBOL SEPARADOR NUMERO TANCA_P .

    $default  reduce using rule 11 (transicio)


State 55

   12 transicio: OBRE_P NUMERO COMA NUMERO SEPARADOR NUMERO TANCA_P .

    $default  reduce using rule 12 (transicio)
